--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <title>Me</title>
 </head>
 
-<body>
+<body class="background--main">
   <div id="root"></div>
   <script src="index.tsx"></script>
 </body>
